{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 228,
  "lineage": "b86f6d37-ed7c-9489-fa6e-5b0ac7a3780e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c2fff6972c8cdb7e",
            "owner_id": "284381130505",
            "vpc_id": "vpc-00dee67d4edbe6dd5"
          },
          "depends_on": [
            "aws_vpc.persepolis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c2fff6972c8cdb7e",
            "id": "r-rtb-0e167dc5ba1639e971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e167dc5ba1639e97",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.persepolis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284381130505:security-group/sg-0b9c283a6cec10a19",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9c283a6cec10a19",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "284381130505",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00dee67d4edbe6dd5"
          },
          "depends_on": [
            "aws_vpc.persepolis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284381130505:subnet/subnet-0898f4d7db19c1012",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0898f4d7db19c1012",
            "map_public_ip_on_launch": true,
            "owner_id": "284381130505",
            "vpc_id": "vpc-00dee67d4edbe6dd5"
          },
          "depends_on": [
            "aws_vpc.persepolis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284381130505:subnet/subnet-01ae0ddf7914b60be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01ae0ddf7914b60be",
            "map_public_ip_on_launch": true,
            "owner_id": "284381130505",
            "vpc_id": "vpc-00dee67d4edbe6dd5"
          },
          "depends_on": [
            "aws_vpc.persepolis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284381130505:subnet/subnet-02bd233163bbf8a6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02bd233163bbf8a6a",
            "map_public_ip_on_launch": true,
            "owner_id": "284381130505",
            "vpc_id": "vpc-00dee67d4edbe6dd5"
          },
          "depends_on": [
            "aws_vpc.persepolis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "persepolis",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284381130505:vpc/vpc-00dee67d4edbe6dd5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07c18c5bdffded00e",
            "default_route_table_id": "rtb-0e167dc5ba1639e97",
            "default_security_group_id": "sg-0670a14e3dcb42d92",
            "dhcp_options_id": "dopt-053c167e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00dee67d4edbe6dd5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e167dc5ba1639e97",
            "owner_id": "284381130505"
          }
        }
      ]
    }
  ]
}